@@ -1,3 +1,9 @@
+2005-10-20  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-main.c:
+	Collect an return value when getting media type, and check for
+	errors.
+
 2005-10-11  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-prefs.c:
